@startuml
'https://plantuml.com/class-diagram

Item -> TodoList
TodoListFile --> Controller
TodoList -> TodoListFile
TodoList -> Controller
Controller <-- App
Item --> Controller
DateEditingCell --> Controller

class Controller {
    ImportTodoListFromFile()
    ExportTodoListFromFile()
    ClearTableItems()
    DeleteSelectedItems()
    AddNewItemToTable()
    UpdateTable()
    initialize()
}

class DateEditingCell {
    startEdit()
    cancelEdit()
    updateItem()
    cancelDatePicker()
    getDate()
}

class Item {
    String description
    LocalDate dueDate
    Boolean isComplete
}

class TodoList {
    ArrayList<Item> items
    ArrayList<Item> GetCompleted()
    ArrayList<Item> GetIncomplete()
}

class TodoListFile {
    TodoList GetTodoList(String path)
    void ExportTodoList(TodoList todoList, String dir)
}

class App {
    start()
    main()
}

@enduml